<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="25dp"
    card_view:cardBackgroundColor="@color/primary"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp"
    android:foreground="?selectableItemBackground">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_description"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/plant_name"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/item_image"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/item_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/age"
            card_view:layout_constraintEnd_toStartOf="@+id/item_age_value"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toEndOf="@+id/item_image"
            card_view:layout_constraintTop_toBottomOf="@+id/item_title" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/item_age_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_format1"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/item_age"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toEndOf="@+id/item_age" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/item_watering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/next_watering"
            card_view:layout_constraintEnd_toStartOf="@+id/item_watering_value"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toEndOf="@+id/item_image"
            card_view:layout_constraintTop_toBottomOf="@+id/item_age" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/item_watering_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_format3"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/item_watering"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toEndOf="@+id/item_watering" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>